--- a/public/index.html
+++ b/public/index.html
@@ -12,8 +12,13 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-
-    <title>React App</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Love+Ya+Like+A+Sister&family=Noto+Sans&family=Saira:wght@700&display=swap"
+      rel="stylesheet"
+    />
+    <title>EEE Boys</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
